--- a/scoreboard/Base.lproj/Main.storyboard
+++ b/scoreboard/Base.lproj/Main.storyboard
@@ -180,6 +180,9 @@
                                                         <real key="value" value="1"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="doubleScoreTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aIC-yR-Blz"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
