--- a/scoreboard/Base.lproj/Main.storyboard
+++ b/scoreboard/Base.lproj/Main.storyboard
@@ -283,10 +283,53 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kth-i7-a1h">
-                                <rect key="frame" x="31" y="157" width="258" height="254"/>
+                                <rect key="frame" x="31" y="99" width="258" height="200"/>
                                 <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="XB1-Mt-2Pj">
+                                        <rect key="frame" x="10" y="50" width="238" height="80"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name left fencer" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lAW-2g-ib9">
+                                                <rect key="frame" x="0.0" y="0.0" width="238" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                        <real key="value" value="0.80000000000000004"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <outlet property="delegate" destination="ebt-dh-mXG" id="FGa-0l-SS2"/>
+                                                </connections>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name right fencer" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="loR-dt-LHM">
+                                                <rect key="frame" x="0.0" y="50" width="238" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                        <real key="value" value="0.80000000000000004"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <outlet property="delegate" destination="ebt-dh-mXG" id="oG1-NV-A6p"/>
+                                                </connections>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="lAW-2g-ib9" secondAttribute="trailing" id="4rR-af-PtE"/>
+                                            <constraint firstItem="lAW-2g-ib9" firstAttribute="leading" secondItem="XB1-Mt-2Pj" secondAttribute="leading" id="yF0-iJ-oUe"/>
+                                        </constraints>
+                                    </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="UKM-iN-ovL">
-                                        <rect key="frame" x="10" y="199" width="238" height="35"/>
+                                        <rect key="frame" x="10" y="150" width="238" height="35"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A61-ew-YHt">
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="35"/>
@@ -324,54 +367,16 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="XB1-Mt-2Pj">
-                                        <rect key="frame" x="10" y="50" width="238" height="80"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name left fencer" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lAW-2g-ib9">
-                                                <rect key="frame" x="0.0" y="0.0" width="238" height="30"/>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                        <real key="value" value="0.80000000000000004"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                        <real key="value" value="5"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name right fencer" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="loR-dt-LHM">
-                                                <rect key="frame" x="0.0" y="50" width="238" height="30"/>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                        <real key="value" value="0.80000000000000004"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                        <real key="value" value="5"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </textField>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="lAW-2g-ib9" secondAttribute="trailing" id="4rR-af-PtE"/>
-                                            <constraint firstItem="lAW-2g-ib9" firstAttribute="leading" secondItem="XB1-Mt-2Pj" secondAttribute="leading" id="yF0-iJ-oUe"/>
-                                        </constraints>
-                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="XB1-Mt-2Pj" firstAttribute="leading" secondItem="kth-i7-a1h" secondAttribute="leading" constant="10" id="0yc-YZ-Adc"/>
-                                    <constraint firstAttribute="height" constant="254" id="HrI-k8-NtE"/>
+                                    <constraint firstItem="UKM-iN-ovL" firstAttribute="top" secondItem="XB1-Mt-2Pj" secondAttribute="bottom" constant="20" id="Cn9-be-t3P"/>
+                                    <constraint firstAttribute="height" constant="200" id="HrI-k8-NtE"/>
                                     <constraint firstAttribute="trailing" secondItem="UKM-iN-ovL" secondAttribute="trailing" constant="10" id="Krg-eA-zdZ"/>
-                                    <constraint firstAttribute="bottom" secondItem="UKM-iN-ovL" secondAttribute="bottom" constant="20" id="Mog-JH-6v1"/>
                                     <constraint firstItem="XB1-Mt-2Pj" firstAttribute="top" secondItem="kth-i7-a1h" secondAttribute="top" constant="50" id="Nd5-99-APW"/>
                                     <constraint firstItem="UKM-iN-ovL" firstAttribute="leading" secondItem="kth-i7-a1h" secondAttribute="leading" constant="10" id="O9T-tO-tZu"/>
                                     <constraint firstAttribute="trailing" secondItem="XB1-Mt-2Pj" secondAttribute="trailing" constant="10" id="fx2-8B-aJK"/>
-                                    <constraint firstItem="UKM-iN-ovL" firstAttribute="top" secondItem="XB1-Mt-2Pj" secondAttribute="bottom" constant="69" id="zax-DO-Swv"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
@@ -383,7 +388,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="kth-i7-a1h" firstAttribute="centerX" secondItem="FHw-3P-ccD" secondAttribute="centerX" id="98c-fS-9t6"/>
-                            <constraint firstItem="kth-i7-a1h" firstAttribute="centerY" secondItem="FHw-3P-ccD" secondAttribute="centerY" id="EEW-Wh-kO3"/>
+                            <constraint firstItem="kth-i7-a1h" firstAttribute="centerY" secondItem="FHw-3P-ccD" secondAttribute="centerY" multiplier="0.7" id="EEW-Wh-kO3"/>
                             <constraint firstItem="BOg-Iw-q6k" firstAttribute="trailing" secondItem="kth-i7-a1h" secondAttribute="trailing" constant="31" id="IXw-aQ-ybW"/>
                             <constraint firstItem="kth-i7-a1h" firstAttribute="leading" secondItem="BOg-Iw-q6k" secondAttribute="leading" constant="31" id="nZz-q0-HTg"/>
                         </constraints>
